Fixed anchor overlap with content with hidden divs

--- a/ee106a/styles.css
+++ b/ee106a/styles.css
@@ -8,6 +8,7 @@ body {
     font-family: Arial;
     font-size: 14px;
     height: 100%;
+    padding-top: 60px;
 }
 
 .container-fluid {
@@ -16,6 +17,10 @@ body {
 
 .main {
     height: 100%;
+}
+
+.anchor {
+    visibility: hidden;
 }
 
 .navbar {
